# latam-challenge

./: .gitignore  LICENSE  README.ES.md  README.md  architecture.drawio
.github/workflows/: cd.yaml  ci.yaml
assets/: architecture.drawio
infra/: .terraform.lock.hcl  README.md  bigquery.tf  iam_roles.tf  main.tf  outputs.tf  provider.tf  pubsub.tf  variables.tf
product_sales/: README.md  pyproject.toml
product_sales/fetch/: main.py  requirements.txt
product_sales/ingestion/: main.py  requirements.txt
product_sales/tests/: test_fetch.py
readme/: README.ES.md
